[tool.poetry]
name = "Whitelist Censor Service Server"
version = "0.1.0"
description = ""
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.21.0"
pytz = "^2022.2.1"
"discord.py" = "^2.0.1"
websockets = "^10.3"
aiofiles = "^22.1.0"

[tool.poetry.dev-dependencies]
black = "^24.8.0"
bandit = "^1.7.9"
flake8 = "^7.1.1"
isort = "^5.13.2"
mypy = "1.11.1"
ossaudit = "0.5.0"
types-paramiko = "^3.4.0.20240423"
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
types-pytz = "^2022.2.1"
types-aiofiles = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
src_paths = ["src"]
profile = "black"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
